<resources>
    <string name="app_name">CP</string>
    <string name="forgot">Forgot password?</string>
    <string name="Login">Login </string>
    <string name="mandatory">This field cannot be empty</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_addmoney">AddmoneyActivity</string>
    <string name="title_activity_withdrawal">WithdrawalActivity</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="title_activity_forgotpassword">ForgotpasswordActivity</string>
    <string name="title_activity_addbankaccount">AddBankAccountActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_profilenotin">ProfilenotinActivity</string>
    <string name="title_activity_customersupport">CustomerSupportActivity</string>
    <string name="title_activity_applybalance">ApplyBalanceActivity</string>
    <string name="title_activity_readrules">ReadrulesActivity</string>
    <string name="title_activity_green">GreenActivity</string>
    <string name="title_activity_violet">VioletActivity</string>
    <string name="title_activity_red">RedActivity</string>


    <string name="register">Register</string>
    <string name="signin">SignIn</string>
    <string name="already_user">Already have an Account? Login here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="newuser">Don't have an account yet? Register here.</string>-->
    <string name="otp_title">Please enter the 6 digit verification code</string>
    <string name="otp_button_text">VERIFY</string>
    <string name="resend_msg">Didn’t receive the OTP?</string>
    <string name="resend_again_msg">Resend again</string>
    <string name="sent_to_91_xxxx_xxx">sent to +91 XXXX XXX</string>


</resources>