<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".OtpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/ic_otp" />
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/otp_title"
                    android:textColor="@color/trueBlack"
                    android:textSize="@dimen/subtitle" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sent_to_91_xxxx_xxx"
                    android:textColor="@color/trueBlack"
                    android:textSize="@dimen/subtitle" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ssa"
                android:hint="Enter new passwod"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ssa"
                android:hint="Enter cofirm password"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ssa"
                android:hint="Enter 6 digit otp"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/btVerify"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/round_button"
                android:layout_gravity="center"
                android:text="@string/otp_button_text"
                android:textColor="@color/white" />




            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_verify">

                <TextView
                    android:id="@+id/tv_didnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_msg"
                    android:textColor="@color/trueBlack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/resend_again_msg"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>